--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,16 +1,16 @@
 /* Variables de colores */
 :root {
-    --primary-color: #FFFCD6;     /* Marrón terracota más rico */
-    --secondary-color: #924E37;   /* Dorado cálido */
-    --bg-header-color: #1B3240; /* Fondo del header */
-    --accent-color: #924E37;      /* Rojo vino elegante */
-    --light-color: #F8F3E9;       /* Crema suave */
-    --dark-color: #2C1D13;        /* Marrón oscuro profundo */
-    --text-color: #3A3026;        /* Texto marrón neutro */
-    --footer-color: #1D1510;      /* Fondo de footer más profundo */
-    --gold-accent: #C5A76C;       /* Toques dorados para detalles */
-    --olive-accent: #64733B;      /* Verde oliva para acentos naturales */
-  }
+  --primary-color: #fffcd6; /* Marrón terracota más rico */
+  --secondary-color: #924e37; /* Dorado cálido */
+  --bg-header-color: #1b3240; /* Fondo del header */
+  --accent-color: #924e37; /* Rojo vino elegante */
+  --light-color: #f8f3e9; /* Crema suave */
+  --dark-color: #2c1d13; /* Marrón oscuro profundo */
+  --text-color: #3a3026; /* Texto marrón neutro */
+  --footer-color: #1d1510; /* Fondo de footer más profundo */
+  --gold-accent: #c5a76c; /* Toques dorados para detalles */
+  --olive-accent: #64733b; /* Verde oliva para acentos naturales */
+}
 
 body {
   font-family: "Montserrat", "Helvetica Neue", sans-serif;
@@ -28,16 +28,16 @@ body {
 
 /* Navbar */
 #mainNav {
-    transition: background-color 0.3s ease, padding 0.3s ease;
-    padding: 20px 0;
-    background-color: var(--bg-header-color);
-  }
-  
-  #mainNav.scrolled {
-    background-color: rgba(0, 0, 0, 0.85);
-    padding: 10px 0;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-  }
+  transition: background-color 0.3s ease, padding 0.3s ease;
+  padding: 20px 0;
+  background-color: var(--bg-header-color);
+}
+
+#mainNav.scrolled {
+  background-color: rgba(0, 0, 0, 0.85);
+  padding: 10px 0;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+}
 
 /* Navbar Brand */
 
@@ -56,6 +56,10 @@ body {
 /* Efecto de hover en el logo */
 .container-logo:hover img {
   transform: scale(1.05);
+}
+
+.container-logo-mobile{
+    display: none;
 }
 
 /* Navbar Brand */
@@ -116,7 +120,7 @@ body {
 /* Personalizar punto de corte para el menú hamburguesa */
 @media (max-width: 670px) {
   .navbar-brand img {
-    width: 90px;
+    width: 180px;
   }
 
   #mainNav {
@@ -198,8 +202,9 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.5);
   padding: 8px 10px;
   border-radius: 4px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: transparent;
   transition: all 0.3s ease;
+  color: var(--primary-color);
 }
 
 .navbar-toggler:hover {
@@ -303,20 +308,20 @@ body {
 /* sidebar */
 
 .sidebar {
-    position: fixed;
-    top: 0;
-    right: -500px;
-    width: 320px;
-    height: 100vh; /* Asegurar 100% viewport */
-    background-color: rgba(0, 0, 0, 0.95);
-    z-index: 2000;
-    transition: right 0.4s ease-in-out;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden; /* Importante: oculta solo si overflow */
-    box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
-    padding: 10px; /* ahora sin padding general */
-  }
+  position: fixed;
+  top: 0;
+  right: -500px;
+  width: 320px;
+  height: 100vh; /* Asegurar 100% viewport */
+  background-color: rgba(27,50,64,0.95);
+  z-index: 2000;
+  transition: right 0.4s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; /* Importante: oculta solo si overflow */
+  box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
+  padding: 10px; /* ahora sin padding general */
+}
 
 .sidebar.active {
   right: 0;
@@ -399,7 +404,7 @@ body {
 }
 
 .sidebar-menu a i {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .sidebar-menu a:hover {
@@ -413,10 +418,10 @@ body {
 }
 
 .sidebar-footer {
-    padding: 20px;
-    flex-shrink: 0; /* No se achica */
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
-    text-align: center;
+  padding: 20px;
+  flex-shrink: 0; /* No se achica */
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  text-align: center;
 }
 
 .btn-reserva-sidebar {
@@ -443,10 +448,10 @@ body {
 }
 
 .social-sidebar {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 10px;
 }
 
 .social-sidebar a {
@@ -464,6 +469,21 @@ body {
 
 @media (max-width: 670px) {
   /* Ocultar la navegación normal en dispositivos móviles */
+  .container{
+    display: flex;
+    justify-content: end;
+    margin-right: 20px;
+  }
+  .container-logo-mobile {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
+  .container-logo-mobile .logo-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+  }
   .collapse.navbar-collapse {
     display: none !important;
   }
@@ -477,8 +497,6 @@ body {
   .sidebar {
     width: 300px;
     right: -500px;
-  }
-  .sidebar-footer {
   }
 }
 
@@ -563,7 +581,7 @@ body {
 .hero-buttons .btn-outline-light {
   background-color: transparent;
   border: 2px solid var(--light-color);
-  color: var(--text-color);
+  color: var(--primary-color);
   transition: all 0.3s ease;
 }
 
@@ -645,6 +663,26 @@ footer {
   text-align: center;
   padding: 2rem;
   margin-top: 2rem;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+footer .social-icons a {
+  color: white;
+  font-size: 1.2rem;
+  opacity: 0.7;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+footer .social-icons a:hover {
+  opacity: 1;
+  transform: translateY(-3px);
+  color: var(--accent-color);
 }
 
 /* Animaciones */
