--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -319,7 +319,7 @@ body {
   top: 0;
   right: -500px;
   width: 320px;
-  height: 100vh; /* Asegurar 100% viewport */
+  height: 100%;
   background-color: rgba(27,50,64,0.95);
   z-index: 2000;
   transition: right 0.4s ease-in-out;
